fixed welcome user page alignment

--- a/index.css
+++ b/index.css
@@ -569,6 +569,13 @@ i[class*="van-type-"] {
     color: red;
 }
 
+.welcome-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 .host-dashboard-earnings {
     background-color: #ffead0;
     padding: 37px 26px;
